crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__complex_newline_preservation-3.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
snapshot_kind: text
---
<file_content path="[TEMP_DIR]/test.txt">


// Header comment


function test() {
    // Inside comment

    let y = 2;


    console.log(y);
}



// Updated footer
</file_content>
