crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__complex_newline_preservation-4.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: content2
snapshot_kind: text
---
// Header comment


function test() {
    // Inside comment

    let y = 2;


    console.log(y);
}



// Updated footer
