crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__empty_block.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: "TempDir::normalize(&result)"
snapshot_kind: text
---
<file_content path="[TEMP_DIR]/test.txt">
    First Line    
    Last Line
</file_content>
