crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__empty_search_new_file-2.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: final_content
snapshot_kind: text
---
New content
