crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__error_messages-2.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: io_err.to_string()
snapshot_kind: text
---
File operation failed: No such file or directory (os error 2)
