crates/forge_app/src/tools/patch/snapshots/forge_app__tools__patch__apply__test__error_messages.snap
---
source: crates/forge_app/src/tools/patch/apply.rs
expression: err.to_string()
snapshot_kind: text
---
File not found at path: nonexistent.txt
